--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,5 +3,6 @@ v0.0.2, 2015-06-30 -- Packaging.
 v0.0.5, 2015-07-09 -- Refactored to have Sessions that get a Connection from the POOL
 v0.0.6, 2015-07-09 -- Actually working with pip
 v0.1.0, 2016-10-21 -- Major updates, including pagination and much more robust records_simple
-v0.1.1, 2016-10-26 -- Fixed pagination and adding actions seems to work
+v0.1.2, 2016-10-26 -- Fixed pagination and adding actions seems to work
+v0.1.3, 2016-10-27 -- Last page logic working
 
