--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,4 +6,5 @@ v0.1.0, 2016-10-21 -- Major updates, including pagination and much more robust r
 v0.1.2, 2016-10-26 -- Fixed pagination and adding actions seems to work
 v0.1.3, 2016-10-27 -- Last page logic working
 v0.1.4, 2016-10-28 -- Don't send Facets and Limiters in JSON if they aren't needed
+v0.1.5, 2016-10-31 -- Now supports Expanders and Limiters in new searches
 
