--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,4 +10,5 @@ v0.1.5, 2016-10-31 -- Now supports Expanders and Limiters in new searches
 v0.1.6, 2016-11-04 -- Bunches of little fixes
 v0.1.7, 2016-11-11 -- Doesn't assume that BibRelationships or RelevancyScore elements exist
 v0.1.8, 2016-11-29 -- Fixes DT1 Limter as given by EDS/EBSCOhost
+v0.1.9, 2016-11-29 -- Handles space after colon in DT1 limiter
 
