--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,3 +15,4 @@ v0.1.10, 2016-12-05 -- Open-ended dates are okay for DT1 limiter
 v0.1.11, 2016-12-15 -- Rejects invalid limiters, based on output from INFO API call
 v0.1.12, 2017-03-15 -- Gets default search mode and uses it unless specified
 v0.1.13, 2017-06-15 -- Handles missing <Titles> in the <BibEntity>
+v0.1.14, 2017-06-29 -- Added PageCount, StartPage, Volume, and Issue to simple records
